change bar to overline

--- a/characters.tex
+++ b/characters.tex
@@ -286,24 +286,24 @@ S_k &= \im \big (\Lk^* \setminus 0 \rightarrow \G[p^k](E^0(B\Lk)) \big ) \\ &= \
 Inverting the determinant of \(u^*\) is equivalent to inverting \(S_k\).
 \end{lemma}
 \begin{proof}
-For \(\bar{i} = (i_1, \ldots, i_d) \in \Lk^*\), set
+For \(\overline{i} = (i_1, \ldots, i_d) \in \Lk^*\), set
 \[
-[\bar{i}](\bar{x}) = [i_1]_{\G}(x_1) +_{\G} \ldots +_{\G} [i_d]_{\G}(x_d).
+[\overline{i}](\overline{x}) = [i_1]_{\G}(x_1) +_{\G} \ldots +_{\G} [i_d]_{\G}(x_d).
 \]
 The matrix defining \(u^*\) is given by the Vandermonde matrix
 \[
 \left(
 \begin{array}{ccccc}
-1 & [\bar{j_1}](\bar{x}) & [\bar{j_1}](\bar{x})^2 & \ldots & [\bar{j_{1}}](\bar{x})^{p^k-1} \\
-1 & [\bar{j_2}](\bar{x}) & [\bar{j_2}](\bar{x})^2 & \ldots & [\bar{j_{2}}](\bar{x})^{p^k-1}\\
+1 & [\overline{j_1}](\overline{x}) & [\overline{j_1}](\overline{x})^2 & \ldots & [\overline{j_{1}}](\overline{x})^{p^k-1} \\
+1 & [\overline{j_2}](\overline{x}) & [\overline{j_2}](\overline{x})^2 & \ldots & [\overline{j_{2}}](\overline{x})^{p^k-1}\\
 \vdots & \vdots & \vdots & \ddots & \vdots \\
-1 & [\bar{j_{p^k}}](\bar{x}) & [\bar{j_{p^k}}](\bar{x})^2 & \ldots & [\bar{j_{p^k}}](\bar{x})^{p^k-1}\\
+1 & [\overline{j_{p^k}}](\overline{x}) & [\overline{j_{p^k}}](\overline{x})^2 & \ldots & [\overline{j_{p^k}}](\overline{x})^{p^k-1}\\
 \end{array} \right),
 \]
-where \(\{\bar{j_1},\ldots,\bar{j_{p^k}}\} = \Lk^*\).
+where \(\{\overline{j_1},\ldots,\overline{j_{p^k}}\} = \Lk^*\).
 The determinant of this matrix is
 \[
-\prod_{1 \leq s < t \leq p^k} ([\bar{j_t}](\bar{x}) - [\bar{j_s}](\bar{x})).
+\prod_{1 \leq s < t \leq p^k} ([\overline{j_t}](\overline{x}) - [\overline{j_s}](\overline{x})).
 \]
 It is a basic fact of subtraction for formal group laws that
 \[
@@ -312,8 +312,8 @@ x -_{\G} y = v(x-y)
 for a unit \(v\). 
 Thus the determinant is, up to multiplication by a unit, 
 \begin{align*}
-\prod_{1 \leq s < t \leq p^k} ([\bar{j_t}](\bar{x}) -_{\G} [\bar{j_s}](\bar{x})) & = \prod_{1 \leq s < t \leq p^k} ([\bar{j_t} - \bar{j_s}](\bar{x})) \\
-& = \prod_{0 \neq \bar{j} \in \Lk^*} [\bar{j}](\bar{x})^{p^k-1}. \qedhere
+\prod_{1 \leq s < t \leq p^k} ([\overline{j_t}](\overline{x}) -_{\G} [\overline{j_s}](\overline{x})) & = \prod_{1 \leq s < t \leq p^k} ([\overline{j_t} - \overline{j_s}](\overline{x})) \\
+& = \prod_{0 \neq \overline{j} \in \Lk^*} [\overline{j}](\overline{x})^{p^k-1}. \qedhere
 \end{align*} 
 \end{proof}
 
