mention another mandell-type results

--- a/main.bib
+++ b/main.bib
@@ -66,6 +66,18 @@ MRREVIEWER = {E. Dyer},
 MRREVIEWER = {Stewart B. Priddy},
 }
 
+@incollection {AdamsOnCobar,
+    AUTHOR = {Adams, J. F.},
+     TITLE = {On the cobar construction},
+ BOOKTITLE = {Colloque de topologie alg\'{e}brique, {L}ouvain, 1956},
+     PAGES = {81--87},
+ PUBLISHER = {Georges Thone, Li\`ege; Masson \& Cie, Paris},
+      YEAR = {1957},
+   MRCLASS = {55.0X},
+  MRNUMBER = {0090045},
+MRREVIEWER = {S. Eilenberg},
+}
+
 @article{AdamsPrimitiveElts,
   title={Primitive elements in the {$K$}-theory of {$BSU$}},
   author={Adams, J Frank},
@@ -776,6 +788,13 @@ MRREVIEWER = {Stanley Kochman},
        URL = {http://dx.doi.org/10.1016/0040-9383(78)90028-9},
 }
 
+@misc{BlomquistHarper,
+Author = {Jacobson R. Blomquist and John E. Harper},
+Title = {An integral chains analog of Quillen's rational homotopy theory equivalence},
+Year = {2016},
+Eprint = {arXiv:1611.04157},
+}
+
 @incollection {BoardmanConditionallyConvergent,
     AUTHOR = {Boardman, J. Michael},
      TITLE = {Conditionally convergent spectral sequences},
@@ -1275,6 +1294,24 @@ author = "Thomas F. Fox"
   author={Ginzburg, Victor and Kapranov, Mikhail and Vasserot, Eric},
   journal={arXiv preprint q-alg/9505012},
   year={1995}
+}
+
+@article {GoerssChains,
+    AUTHOR = {Goerss, Paul G.},
+     TITLE = {Simplicial chains over a field and {$p$}-local homotopy
+              theory},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {220},
+      YEAR = {1995},
+    NUMBER = {4},
+     PAGES = {523--544},
+      ISSN = {0025-5874},
+   MRCLASS = {55P15 (18D15 55P60)},
+  MRNUMBER = {1363853},
+MRREVIEWER = {Richard John Steiner},
+       DOI = {10.1007/BF02572629},
+       URL = {https://doi.org/10.1007/BF02572629},
 }
 
 @incollection {GoerssDieudonne,
