remove numberings from intro theorems

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -20,7 +20,7 @@ gives a homological functor.  This means that the Dieudonn\'e module associated 
 \item[{\Cref{CoopnsForMoravaKandHA}}] Finally, we settle one further case not covered by any of our generic hypotheses above: \(F = K_\Gamma\) and \(E = H\Z/p^j\).  Neither \(K_\Gamma\) nor \(H\Z/p^j\) is Landweber--flat, but because \(K_\Gamma\) is a field spectrum and because the additive group law associated to \(H\Z/p^j\) is so simple, we can still perform the requisite iterated bar spectral sequence calculation by hand.
 \end{description}
 
-This last case is actually our real goal, as we are about to return to the project outlined in the Introduction.  In the language of \Cref{IntroAHSMU6Thm}, choosing \(\Gamma\) to be the formal completion of an elliptic curve at the identity section presents the spectra \(K_\Gamma\) and \(E_\Gamma\) of \Cref{NilpotenceAndPeriodicity} as the most basic examples of \textit{elliptic spectra}.  The goal of that Theorem is to study \(E_* BU[6, \infty)\) for \(E\) an elliptic spectrum, so when proving it in \Cref{ChapterSigmaOrientation} we will be led to consider the fiber sequences
+This last case is actually our real goal, as we are about to return to the project outlined in the Introduction.  In the language of the Theorems from the Introduction, choosing \(\Gamma\) to be the formal completion of an elliptic curve at the identity section presents the spectra \(K_\Gamma\) and \(E_\Gamma\) of \Cref{NilpotenceAndPeriodicity} as the most basic examples of \textit{elliptic spectra}.  The goal of that Theorem is to study \(E_* BU[6, \infty)\) for \(E\) an elliptic spectrum, so when proving it in \Cref{ChapterSigmaOrientation} we will be led to consider the fiber sequences
 \begin{align*}
 B\SU \to BU & \to \OS{H\Z}{2}, & \OS{H\Z}{3} \to BU[6, \infty) & \to B\SU,
 \end{align*}
