--- a/finite.tex
+++ b/finite.tex
@@ -1090,7 +1090,7 @@ In the \(2\)--periodic setting we've become accustomed to, the analogue of \Cref
 \end{remark}
 
 \begin{remark}
-In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of \(MU\) given in \Cref{OriginalDefnOfBordism}, the edge cases of \(K(0) = H\Q\) and \(K(\infty) = \HFp\), and the claimed primacy of these methods, we might wonder if there is any geometric interpretation of the field theories \(K(d)\) for \(0 < d < \infty\).  To date, this is a completely open question and the subject of intense research.
+In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of \(MU\) given in the Introduction, the edge cases of \(K(0) = H\Q\) and \(K(\infty) = \HFp\), and the claimed primacy of these methods, we might wonder if there is any geometric interpretation of the field theories \(K(d)\) for \(0 < d < \infty\).  To date, this is a completely open question and the subject of intense research.
 \end{remark}
 
 We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The key observation is that spectra admitting such self-maps are closed under some natural operations, leading to the following definition:
