--- a/intro.tex
+++ b/intro.tex
@@ -5,7 +5,7 @@
 
 \label{IntroductionSection}
 
-The goal of this book is to communicate a certain \textit{Weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for this introduction is to tell a story about one theorem where it is especially apparent.
+The goal of this book is to communicate a certain \textit{Weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal for this introduction is to tell a story about one theorem where it is especially apparent.
 
 To begin, we will define a homology theory called \index{bordism!geometric chains}\textit{bordism homology}.  Recall that the singular homology of a space \(X\) comes about by probing \(X\) with simplices: beginning with the collection of continuous maps \(\sigma\co \Delta^n \to X\), we take the free \(\Z\)--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds \(Z\) as the probes instead of simplices:\footnote{One does not need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
 \begin{align*}
@@ -14,9 +14,9 @@ To begin, we will define a homology theory called \index{bordism!geometric chain
 & \xrightarrow{\partial} \cdots.
 \end{align*}
 
-\begin{lemma}[{\cite[Section 4]{Kochman}}]\label{OriginalDefnOfBordism}
+\begin{lemma*}[{\cite[Section 4]{Kochman}}]
 This forms a chain complex of monoids under disjoint union of manifolds, and its homology is written \(MO_*(X)\).  These are naturally abelian groups\footnote{For instance, the inverse map comes from the cylinder construction: for a manifold \(M\), the two components of \(\partial(I \times M)\) witness the existence of an inverse to \(M\) in the bordism groups.}, and moreover they satisfy the axioms of a generalized homology theory. \qed
-\end{lemma}
+\end{lemma*}
 
 In fact, we can define a bordism theory \(MG\) for any suitable family of structure groups \(G(n) \to O(n)\).  The coefficient ring of \(MG\), or its value \(MG_*(*)\) on a point, gives the ring of \(G\)--bordism classes, and generally \(MG_*(Y)\) gives a kind of ``bordism in families over the space \(Y\)''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:
 \begin{align*}
@@ -42,9 +42,9 @@ Associated to such a representative \((Z, \omega)\), the yoga of stable homotopy
 \end{align*}
 where \(\phi\) is the orientation map.  Altogether, this composite gives us an element of \(\pi_0 H\Z\), i.e., an integer.
 
-\begin{lemma}%\citeme{Where is this proven?}
+\begin{lemma*}%\citeme{Where is this proven?}
 The integer obtained by the above process is \(\int_Z \omega\). \qed
-\end{lemma}
+\end{lemma*}
 
 \noindent Many theorems accompany this definition of \(\int_Z \omega\) for free, entailed by the general machinery of stable homotopy theory.  The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
 
@@ -60,17 +60,17 @@ Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\St
 
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
-\begin{theorem}[{Ochanine~\cite{Ochanine,OchanineEnrichmentToKO}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{orientation!Witten genus}
+\begin{theorem*}[{Ochanine~\cite{Ochanine,OchanineEnrichmentToKO}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\index{orientation!Witten genus}
 There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half\footnote{It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).} its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
-\end{theorem}
+\end{theorem*}
 
 \noindent However, neither party gave indication that their result should be valid ``in families'', and no attendant theory of integration was formally produced.  From the perspective of a homotopy theorist, it was not clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
 
 Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic spectrum}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``\(K^{\Tate}\)'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
-\begin{theorem}[{\cite[Theorem 2.59]{AHSTheoremOfTheCube}}]
+\begin{theorem*}[{\cite[Theorem 2.59]{AHSTheoremOfTheCube}}]
 If \(E\) is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra \(M\String \to E\) called the \index{sigma orientation@\(\sigma\)--orientation}\(\sigma\)--orientation (for \(E\)).  Additionally, there is an elliptic spectrum \(K^{\Tate}\) whose \(\sigma\)--orientation gives Witten's genus \(M\String_* \to K^{\Tate}_*\) . \qed
-\end{theorem}
+\end{theorem*}
 
 We now come to the motivation for this text: the homotopical \(\sigma\)--orientation was actually first constructed using formal geometry.  The original proof of Ando--Hopkins--Strickland begins with a reduction to maps of the form \[MU[6, \infty) \to E.\]  They then work to show that in especially good cases they can complete the missing arrow in the diagram
 \begin{center}
@@ -81,9 +81,9 @@ MU[6, \infty) \arrow{r} \arrow{rd} & M\String \arrow[densely dotted]{d} \\
 \end{center}
 Leaving aside the extension problem for the moment, their main theorem is the following description of the cohomology ring \(E^* MU[6, \infty)\):
 
-\begin{theorem}[{Ando--Hopkins--Strickland~\cite{AHSTheoremOfTheCube}, cf.\ Singer~\cite{Singer} and Stong~\cite{Stong}}]\label{IntroAHSMU6Thm}
-For \(E\) an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``\(C^3(\G_E; \sheaf I(0))\)'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle \(\sheaf I(0)\) over \(\G_E\).  When \(E\) is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve \(C\) and a specified isomorphism \(\G_E \cong C^\wedge_0\), the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class \(MU[6, \infty) \to E\).  This assignment is natural in the choice of elliptic \(E\). \qed
-\end{theorem}
+\begin{theorem*}[{Ando--Hopkins--Strickland~\cite{AHSTheoremOfTheCube}, cf.\ Singer~\cite{Singer} and Stong~\cite{Stong}}]
+For \(E\) an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``\(C^3(\G_E; \sheaf I(0))\)'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle \(\sheaf I(0)\) over \(\G_E\), a certain formal group associated to \(E\).  When \(E\) is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve \(C\) and a specified isomorphism \(\G_E \cong C^\wedge_0\), the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class \(MU[6, \infty) \to E\).  This assignment is natural in the choice of elliptic \(E\). \qed
+\end{theorem*}
 
 Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.  In the course of this text, we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of \(MO\), which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we will then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the \(\sigma\)--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
