--- a/sigma.tex
+++ b/sigma.tex
@@ -1210,7 +1210,7 @@ This leads us to consider all curves \(E_\Lambda\) simultaneously---or, equivale
 Using these ideas, we construct a cohomology theory \(H \sheaf O_{\h} P\), where \(\sheaf O_{\h}\) is the ring of complex-analytic functions on the upper half-plane.  The \(\h\)--parametrized family of elliptic curves \[\h \times \C / (1, \tau) \to \h,\] together with the logarithm, present \(H \sheaf O_{\h} P\) as an elliptic spectrum \(H\h P\).  The canonical map \(\Phi\co MU[6, \infty) \to H\h P\) specializes at a point to give the functions \(\Phi(-; \Lambda)\) considered above, and hence \(\Phi(M) \in u^k \cdot \sheaf O_{\h}\) is itself a complex modular form of weight \(k\).
 \end{example}
 
-In fact, this totalized map \(\Phi\) is a ghost of Ochanine and Witten's modular genus from \Cref{OchanineWittenTheorem}, as a bordism class in \(MU[6, \infty)_{2n}\) is, in particular, a bordism class in \(M\String_{2n}\).  However, they know more about this function than we can presently see: for instance, they claim that it has an integral \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansion.  In terms of the modular form, its \(q\)--expansion is given by building the Taylor expansion ``at \(\infty\)'' (using that unspoken decay condition).  In order to use our topological methods, it would be nice to have an elliptic spectrum embodying these \(q\)--expansions in the same way that \(H\h P\) embodied holomorphic functions, together with a comparison map that trades a modular form for its \(q\)--expansion.  The main ideas leading to such a spectrum come from considering the behavior of \(E_\Lambda\) as \(\tau\) tends to \(i \cdot \infty\).
+In fact, this totalized map \(\Phi\) is a ghost of Ochanine and Witten's modular genus from the Introduction, as a bordism class in \(MU[6, \infty)_{2n}\) is, in particular, a bordism class in \(M\String_{2n}\).  However, they know more about this function than we can presently see: for instance, they claim that it has an integral \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansion.  In terms of the modular form, its \(q\)--expansion is given by building the Taylor expansion ``at \(\infty\)'' (using that unspoken decay condition).  In order to use our topological methods, it would be nice to have an elliptic spectrum embodying these \(q\)--expansions in the same way that \(H\h P\) embodied holomorphic functions, together with a comparison map that trades a modular form for its \(q\)--expansion.  The main ideas leading to such a spectrum come from considering the behavior of \(E_\Lambda\) as \(\tau\) tends to \(i \cdot \infty\).
 
 \begin{definition}
 Note that as \(\tau\) tends to \(i \cdot \infty\), the parameter \(q = \exp(2 \pi \mathrm i \tau)\) tends to \(0\).  In the multiplicative model of \(\moduli{ell} \times \Spec \C\), we considered the punctured complex disk \(D'\) with its associated family of elliptic curves \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of \(C'\) over a particular point \(q \in D'\) is the curve \(\C^\times / q^{\Z}\). %  , and \(\theta\) determines a holomorphic function on the total space \(\C^\times \times D'\).
