add footnote about algebricity

--- a/main.bib
+++ b/main.bib
@@ -3391,6 +3391,20 @@ MRREVIEWER = {P. S. Landweber},
   publisher={Springer}
 }
 
+@ARTICLE{Pstragowski,
+   author = {Pstragowski, P.},
+    title = {Chromatic homotopy is algebraic when $p > n^2+n+1$},
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1810.12250},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology},
+     year = 2018,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv181012250P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article {Quillen,
     AUTHOR = {Quillen, Daniel},
      TITLE = {Elementary proofs of some results of cobordism theory using
