admit to using complex bott periodicity

--- a/mo.tex
+++ b/mo.tex
@@ -670,7 +670,7 @@ In the slightly less degenerate case of \(X = H\Z\), one can calculate \[\Cotor^
 \end{example}
 
 \begin{example}\label{kOASSExample}
-Next, we consider the more computationally serious case of \(X = kO\), the connective real \(K\)--theory spectrum.  The main input we need is the structure of \(H\F_{2*} kO\) as an \(\mathcal A_*\)--comodule, so that we can compute \[\Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} kO) \Rightarrow \pi_* kO^\wedge_2.\]  There is a slick trick for doing this: by working in the category of \(kO\)--modules rather than in all spectra, we can construct a relative Adams spectral sequence \[\Cotor_{\pi_* \HFtwo \sm_{kO} \HFtwo}^{*, *}(\F_2, \pi_* \HFtwo \sm_{kO}(kO \sm \HFtwo)) \Rightarrow \pi_*(kO \sm \HFtwo).\]  The second argument is easy to identify: \[\pi_* \HFtwo \sm_{kO}(kO \sm \HFtwo) = \pi_* \HFtwo \sm \HFtwo = \mathcal A_*.\]  The Hopf algebra requires further input.  Consider the following trio of cofiber sequences\footnote{This first sequence, known as the \index{Wood cofiber sequence}Wood cofiber sequence, is a consequence of a very simple form of Bott periodicity~\cite[Section 5]{Harris}: there is a fiber sequence of infinite-loopspaces \(O/U \to BO \to BU\), and \(\OS{kO}{1} = O/U\).}:
+Next, we consider the more computationally serious case of \(X = kO\), the connective real \(K\)--theory spectrum.  The main input we need is the structure of \(H\F_{2*} kO\) as an \(\mathcal A_*\)--comodule, so that we can compute \[\Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} kO) \Rightarrow \pi_* kO^\wedge_2.\]  There is a slick trick for doing this: by working in the category of \(kO\)--modules rather than in all spectra, we can construct a relative Adams spectral sequence \[\Cotor_{\pi_* \HFtwo \sm_{kO} \HFtwo}^{*, *}(\F_2, \pi_* \HFtwo \sm_{kO}(kO \sm \HFtwo)) \Rightarrow \pi_*(kO \sm \HFtwo).\]  The second argument is easy to identify: \[\pi_* \HFtwo \sm_{kO}(kO \sm \HFtwo) = \pi_* \HFtwo \sm \HFtwo = \mathcal A_*.\]  The Hopf algebra requires further input.  Consider the following trio of cofiber sequences\footnote{This first sequence, known as the \index{Wood cofiber sequence}Wood cofiber sequence, is a consequence of a very simple form of Bott periodicity~\cite[Section 5]{Harris}: there is a fiber sequence of infinite-loopspaces \(O/U \to BO \to BU\), and \(\OS{kO}{1} = O/U\).  The second sequence is a manifestation of complex Bott periodicity.}:
 \begin{align*}
 \Susp kO & \xrightarrow{\cdot \eta} kO \to kU, &
 \Susp^2 kU & \xrightarrow{\cdot \beta} kU \to H\Z, &
