kill stray accented adele

--- a/powerops.tex
+++ b/powerops.tex
@@ -859,7 +859,7 @@ M\Spin \arrow[densely dotted]{r} \arrow[bend left=15]{rr} \arrow{rrd} \arrow{rd}
 & \Q \otimes KO \arrow{r} & \Q \otimes KO_p.
 \end{tikzcd}
 \end{center}
-So, we seek a pair of \(E_\infty\)--ring maps into the rationalization and the \(p\)--completion of \(KO\) which agree on the \(p\)--local ad\`eles, which involves understanding not just the mapping spaces but also the pushforward maps between them.
+So, we seek a pair of \(E_\infty\)--ring maps into the rationalization and the \(p\)--completion of \(KO\) which agree on the \(p\)--local adeles, which involves understanding not just the mapping spaces but also the pushforward maps between them.
 
 
 
