uniformity: MG rather than Mj

--- a/powerops.tex
+++ b/powerops.tex
@@ -849,7 +849,7 @@ hence \(\EinftyRings(MG, R)\) appears as the fiber at \(\gl_1 \eta_R\) of the re
 \end{proof}
 
 \begin{corollary}[{\cite[Section 2.3]{AHR}}]
-There exist \(E_\infty\) maps \(Mj \to R\) if and only if \(\gl_1 \eta_R \circ j\) is null-homotopic.  If this is the case, then the set \[\EinftyRings(Mj, R)\] is a torsor for \([\Susp g, \gl_1 R]\). \qed
+There exist \(E_\infty\) maps \(MG \to R\) if and only if \(\gl_1 \eta_R \circ j\) is null-homotopic.  If this is the case, then the set \[\EinftyRings(MG, R)\] is a torsor for \([\Susp g, \gl_1 R]\). \qed
 \end{corollary}
 
 Ando, Hopkins, and Rezk~\cite{AHR} have used this presentation to understand the mapping space \(\EinftyRings(M\String, \tmf)\).  In this Lecture, we will use this same technology to understand the mapping space \[\EinftyRings(M\Spin, KO_{(p)}),\] which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do \(\EinftyRings(M\Spin, KO)\) as a warm-up computation~\cite[Section 7]{AHR}, and we are further \(p\)--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with \index{chromatic localization!fracture}chromatic fracture applied to the target:
