drop redundant "calculation"

--- a/sigma.tex
+++ b/sigma.tex
@@ -1417,7 +1417,7 @@ Recall that our reinterpretation of \Cref{CharacterizationOfBSUUpperE} in \Cref{
 \end{center}
 since \(\Sigma^2(\CP^\infty_E; \Gm)\) is defined to be the closed subscheme of \(C^2(\CP^\infty_E; \Gm)\) of those functions satisfying \(f(x, -x) = 1\).
 
-The ordinary homology of \(\Spin/\SU\) is free and even, so it suffices to check that this map is null in the case \(E = H\Z_{(2)}\), since one can then conclude the general case by the Atiyah--Hirzebruch spectral sequence.  Manual calculation in a Serre spectral sequence gives the calculation \[H\Z_{(2)}{}_*(\Spin/\SU) \cong \Gamma_{\Z_{(2)}}[a_{2n+1} \mid n \ge 1]\] as well as that the homological maps induced by \(i\) and \(j\) are respectively injective and surjective.  In particular, we need only check that the above composite is zero on \(H\Z_{(2)}\)--homology after postcomposition with \(H_*(i)\).  The \(\SU\)--bundle classified by postcomposition with \(i\) is \[(1 - \L)(1 - \overline \L) - (1 - \overline \L)(1 - \L),\] which is itself trivial, hence the classifying map is null and so must be the map on homology.
+The ordinary homology of \(\Spin/\SU\) is free and even, so it suffices to check that this map is null in the case \(E = H\Z_{(2)}\), since one can then conclude the general case by the Atiyah--Hirzebruch spectral sequence.  Manual calculation in a Serre spectral sequence gives \[H\Z_{(2)}{}_*(\Spin/\SU) \cong \Gamma_{\Z_{(2)}}[a_{2n+1} \mid n \ge 1]\] as well as that the homological maps induced by \(i\) and \(j\) are respectively injective and surjective.  In particular, we need only check that the above composite is zero on \(H\Z_{(2)}\)--homology after postcomposition with \(H_*(i)\).  The \(\SU\)--bundle classified by postcomposition with \(i\) is \[(1 - \L)(1 - \overline \L) - (1 - \overline \L)(1 - \L),\] which is itself trivial, hence the classifying map is null and so must be the map on homology.
 
 We are left with showing that the factorized map is an injection, and again by appealing to Atiyah--Hirzebruch spectral sequences it suffices to show this in the case \(E = \HFtwo\).  The diagram considered above extends as follows:
 \begin{center}
