lift 3.6.5 through the affine cover

--- a/finite.tex
+++ b/finite.tex
@@ -1200,7 +1200,7 @@ The functor \[\context{MU}(-)\co \CatOf{Spectra}^{\fin} \to \CatOf{Coh}(\context
 The construction as we have described it falls short of completely recovering \(\Spec R\), as we have constructed only a topological space rather than a locally ringed space (or anything otherwise equipped locally with algebraic data, as in our functor of points perspective).  The approach taken by Balmer~\cite[Section 6]{Balmer} is to use Tannakian reconstruction to extract a structure sheaf of local rings from the prime \(\otimes\)--ideal subcategories.  We, however, are at least as interested in finite spectra as we are the ring spectrum \(\S\), so we will take an approach that emphasizes module categories rather than local rings.  Specifically, Bousfield's theory of \index{Bousfield localization}homological localization allows us to lift the localization structure among open substacks of \(\moduli{fg}\) to the category \(\CatOf{Spectra}\) as follows:
 
 \begin{theorem}[{Bousfield localization, \cite{BousfieldLocalization}, \cite[Theorem 7.7]{Margolis}}]\label{BousfieldLocalizationThm}
-Let \(j\co \Spec R \to \moduli{fg}\) be a flat map, and let \(R_*\) denote the homology theory associated to it by \Cref{LandwebersStackyTheorem}.  There is then a diagram
+Let \(j\co \Spec R \to \moduli{fgl}\) be a map with flat composite to \(\moduli{fg}\), and let \(R_*\) denote the homology theory associated to it by \Cref{LandwebersStackyTheorem}.  There is then a diagram
 \begin{center}
 \begin{tikzcd}[column sep=2.2cm,row sep=2cm]
 \CatOf{Spectra}_R \arrow["\context{R}(-)", "\mathrm{conservative}"', very thick]{r} \arrow[leftarrow, shift right=0.20cm, very thick, "L_R"']{d} & \CatOf{QCoh}(\context{R}) \arrow[shift right=0.20cm, very thick, leftarrow, "j^*"']{d} \\
