kill undefined use of "homogeneous"

--- a/mo.tex
+++ b/mo.tex
@@ -344,7 +344,7 @@ A \index{grading|see {\(\Gm\) action}}\index{group scheme!multiplicative group, 
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
-A graded ring \(A\) is equivalent data to an affine scheme \(\Spec A\) with an \index{group scheme!multiplicative group, \(\Gm\)!action}action by \(\mathbb G_m\).  Additionally, a map \(A \to B\) is homogeneous exactly when the induced map \(\Spec B \to \Spec B\) is \(\mathbb G_m\)--equivariant.
+A graded ring \(A\) is equivalent data to an affine scheme \(\Spec A\) with an \index{group scheme!multiplicative group, \(\Gm\)!action}action by \(\mathbb G_m\).  Additionally, a map \(A \to B\) respects the grading exactly when the induced map \(\Spec B \to \Spec B\) is \(\mathbb G_m\)--equivariant.
 \end{lemma}
 \begin{proof}
 A \(\mathbb G_m\)--action on \(\Spec A\) is equivalent data to a coaction map \[\alpha^*: A \to A \otimes \F_2[x^\pm].\]  Define \(A_k\) to be those points in \(a\) satisfying \(\alpha^*(a) = a \otimes x^k\).  It is clear that we have \(1 \in A_0\) and that \(A_j A_k \subseteq A_{j+k}\).  To see that \(A = \bigoplus_k A_k\), note that every tensor can be written as a sum of pure tensors.  Conversely, given a graded ring \(A\), define the coaction map on \(A_k\) by \[(a_k \in A_k) \mapsto x^k a_k\] and extend linearly.
