forgot about acyclic groups

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -149,7 +149,7 @@ Various large-scale behaviors of the \(MU\)--Adams spectral sequence are poorly 
 
 Another important observation is that \(\eta\) is not nilpotent in the \(E_2\)--term of the \(MU\)--Adams spectral sequence, and so generally the nilpotence theorems---the most impactful theorems known about the global stable category---do not hold in the algebraic model \(\CatOf{QCoh}(\moduli{fg})\).  Rather, the nilpotency of \(\eta\) is enforced by a differential further in the spectral sequence.  This differential is actually also algebraic, but of a different nature: it can be deduced from the \(C_2\)--fixed point spectral sequence for \(KU^{hC_2} \simeq KO\).  Understanding what bouquet of extra algebraic techniques account for the general nilpotency of stable homotopy elements would be very interesting.
 
-Yet another interesting observation about this same homotopy fixed point spectral sequence is that it has a horizontal vanishing line on the \(E_4\) page.  This phenomenon is quite generic~\cite{MathewMeier}, and in particular it is also true of the descent spectral sequence for \(\TMF\).  This is quite intriguing: the moduli stack of elliptic curves is Artinian (as are most ``well-behaved'' moduli stacks considered in arithmetic geometry), meaning that it has finite stabilizer groups.  Such stacks are especially amenable to geometric study.  However, this same finiteness is the source of the infinite cohomological dimension of the moduli of elliptic curves: after all, every nontrivial finite group has infinite group cohomology with coefficients in the trivial integral representation.  In this sense, the \emph{derived} moduli of elliptic curves enjoys both of these benefits: it has finite stabilizer groups, and it simultaneously is, in a certain sense, of \emph{finite} cohomological dimension.  Surely this is useful for something: there must be some facts that arithmetic geometers wish were true, but which are stymied by the infinite cohomological dimension of \(\moduli{ell}\).  Finding a use for this may well allow information to flow out of homotopy theory and into arithmetic geometry, itself an exciting prospect.
+Yet another interesting observation about this same homotopy fixed point spectral sequence is that it has a horizontal vanishing line on the \(E_4\) page.  This phenomenon is quite generic~\cite{MathewMeier}, and in particular it is also true of the descent spectral sequence for \(\TMF\).  This is quite intriguing: the moduli stack of elliptic curves is Artinian (as are most ``well-behaved'' moduli stacks considered in arithmetic geometry), meaning that it has finite stabilizer groups.  Such stacks are especially amenable to geometric study.  However, this same finiteness is the source of the infinite cohomological dimension of the moduli of elliptic curves: after all, the most common finite groups have infinite group cohomology with coefficients in the trivial integral representation.  In this sense, the \emph{derived} moduli of elliptic curves enjoys both of these benefits: it has finite stabilizer groups, and it simultaneously is, in a certain sense, of \emph{finite} cohomological dimension.  Surely this is useful for something: there must be some facts that arithmetic geometers wish were true, but which are stymied by the infinite cohomological dimension of \(\moduli{ell}\).  Finding a use for this may well allow information to flow out of homotopy theory and into arithmetic geometry, itself an exciting prospect.
 
 Finally, a precise understanding of vanishing curves in other Adams spectral sequences---for instance Gonz\'{a}lez's results for the \(BP\<1\>\)--Adams spectral sequence~\cite{Gonzalez}---also give rise to sparsity results in the \(MU\)--Adams spectral sequence, and hence control of the overall behavior.
 
