missing constants in Weierstrass formula

--- a/sigma.tex
+++ b/sigma.tex
@@ -904,7 +904,7 @@ Lastly, one checks that this basis gives us access to the desired collection of 
 
 The first goal of this Lecture is to give the briefest possible summary of the theory of elliptic curves that covers the topics necessary to us in the coming sections.  Accordingly, we won't cover many topics that a sane introduction to elliptic curves would make a point to cover, and---perhaps worse---we will hardly prove anything.  We will, however, discover a place where ``\(C_3 \G\)'' appears internally to the theory of elliptic curves, and I hope nonetheless that this will give the arithmetically disinclined reader a foothold on the ``elliptic'' part of ``elliptic cohomology''.
 
-To begin, recall that an \index{elliptic curve}elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice \(\Lambda\) of full rank in \(\C\) and forming the quotient \[\C \xrightarrow{\pi_\Lambda} \C / \Lambda =: E_\Lambda.\]  A meromorphic function \(f\) on \(E_\Lambda\) pulls back to give a meromorphic function \(\pi_\Lambda^* f\) on \(\C\) which satisfies a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  It follows immediately that there are no holomorphic such functions, save the constants---such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order \(2\) at the lattice points and satisfies the periodicity constraints: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on \(E_\Lambda\), in the sense that the subsheaf spanned by the algebra generators \(\wp_\Lambda\) and \(\wp_\Lambda'\) is exactly \(\pi_\Lambda^* \sheaf M_{E_\Lambda}\).  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - 60G_4(\Lambda) \wp_\Lambda(z) - 140G_6(\Lambda),\] for some special values \(G_4(\Lambda), G_6(\Lambda) \in \C\).  Accordingly, writing \(C \subseteq \CP^2\) for the projective curve \(wy^2 = 4x^3 - G_4(\Lambda) w^2 x - G_6(\Lambda) w^3\), there is an analytic group isomorphism
+To begin, recall that an \index{elliptic curve}elliptic curve in the complex setting is a torus, and it admits a presentation by selecting a lattice \(\Lambda\) of full rank in \(\C\) and forming the quotient \[\C \xrightarrow{\pi_\Lambda} \C / \Lambda =: E_\Lambda.\]  A meromorphic function \(f\) on \(E_\Lambda\) pulls back to give a meromorphic function \(\pi_\Lambda^* f\) on \(\C\) which satisfies a periodicity constraint in the form of the functional equation \[\pi_\Lambda^* f(z + \Lambda) = \pi_\Lambda^* f(z).\]  It follows immediately that there are no holomorphic such functions, save the constants---such a function would be bounded, and Liouville's theorem would apply.  It is, however, possible to build the following meromorphic special function, which has poles of order \(2\) at the lattice points and satisfies the periodicity constraints: \[\wp_\Lambda(z) = \frac{1}{z^2} + \sum_{\omega \in \Lambda \setminus \{0\}} \frac{1}{(z - \omega)^2} - \frac{1}{\omega^2}.\]  Its derivative is also a meromorphic function satisfying the periodicity constraint: \[\wp_\Lambda'(z) = -2 \sum_{\omega \in \Lambda} \frac{1}{(z - \omega)^3}.\]  In fact, these two functions generate all other meromorphic functions on \(E_\Lambda\), in the sense that the subsheaf spanned by the algebra generators \(\wp_\Lambda\) and \(\wp_\Lambda'\) is exactly \(\pi_\Lambda^* \sheaf M_{E_\Lambda}\).  This algebra is subject to the following relation, in the form of a differential equation: \[\wp_\Lambda'(z)^2 = 4 \wp_\Lambda(z)^3 - 60G_4(\Lambda) \wp_\Lambda(z) - 140G_6(\Lambda),\] for some special values \(G_4(\Lambda), G_6(\Lambda) \in \C\).  Accordingly, writing \(C \subseteq \CP^2\) for the projective curve \(wy^2 = 4x^3 - 60 G_4(\Lambda) w^2 x - 140 G_6(\Lambda) w^3\), there is an analytic group isomorphism
 \begin{align*}
 E_\Lambda & \to C, \\
 z \pmod \Lambda & \mapsto [1: \wp_\Lambda(z): \wp_\Lambda'(z)].
