mention geometric consequences of Witten genus

--- a/main.bib
+++ b/main.bib
@@ -1152,6 +1152,21 @@ MRREVIEWER = {J. F. Adams},
 MRREVIEWER = {J.-E. Bertin},
 }
 
+@incollection {Dessai,
+    AUTHOR = {Dessai, Anand},
+     TITLE = {Some geometric properties of the {W}itten genus},
+ BOOKTITLE = {Alpine perspectives on algebraic topology},
+    SERIES = {Contemp. Math.},
+    VOLUME = {504},
+     PAGES = {99--115},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2009},
+   MRCLASS = {58J26 (57R20 57S15)},
+  MRNUMBER = {2581907},
+       DOI = {10.1090/conm/504/09877},
+       URL = {https://doi.org/10.1090/conm/504/09877},
+}
+
 @article{Devalapurkar,
   title={Roots of unity in {$K(n)$}--local {$E_\infty$}-rings},
   author={Devalapurkar, Sanath K},
