kill spurious x in 4.2.8

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -389,12 +389,12 @@ For \(F\) and \(E\) ring spectra, we define their \index{Hopf ring!algebraic}\te
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 3.8]{RavenelWilsonHopfRingForMU}, \cite[Theorem 9.7]{Wilson}}]\label{UnstableRWRelation}
-Choosing complex orientations of \(E\) and \(F\), define the following quantities: \(\beta_j\) is dual to the \(j\){\th} power of the coordinate in \(F^* \CP^\infty\), \(\beta(s)\) denotes the formal sum \(\beta(s) = \sum_j \beta_j x^j\),
+Choosing complex orientations of \(E\) and \(F\), define the following quantities: \(\beta_j\) is dual to the \(j\){\th} power of the coordinate in \(F^* \CP^\infty\), \(\beta(s)\) denotes the formal sum \(\beta(s) = \sum_j \beta_j s^j\),
 \begin{align*}
 \beta(s +_F t) & = \sum_n \beta_n[1] \left(\sum_{i, j} a_{ij}^F s^i t^j \right)^n, \\
 \beta(s) +_{[E]} \beta(t) & = \bigast_{i, j} \left(\beta_0[a_{ij}^E] \circ \left( \sum_k \beta_k[1] s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell[1] t^\ell \right)^{\circ j} \right).
 \end{align*}
-There is a natural isomorphism of Hopf rings \[\AA(F, E) \cong \frac{(F_0 \CP^\infty)_{F_0[E^0]}[E^0]}{\beta(s +_F t) = \beta(s) +_{[E]} \beta(t)},\] where the equality is imposed term-by-term on the Hopf ring.\footnote{This relation is often referred to as the Ravenel--Wilson relation.\index{Ravenel--Wilson relation}}
+There is a natural isomorphism of Hopf rings \[\AA(F, E) \cong \frac{(F_0 \CP^\infty)_{F_0[E^0]}[E^0]}{\beta(s +_F t) = \beta(s) +_{[E]} \beta(t)},\] where the equality is imposed term-by-term on the Hopf ring.\footnote{Thuis relation is often referred to as the Ravenel--Wilson relation.\index{Ravenel--Wilson relation}}
 \end{lemma}
 \begin{proof}[Proof sketch]
 The orientations of \(E\) and \(F\) give rise to classes \(x^j \in E^0 \CP^\infty\) and \(\beta_k \in F_0 \CP^\infty\), and hence classes \(\beta_k[x^j] \in \AA(F, E)\).  Two of the core relations imposed on this Hopf ring give us two useful identities:
